src/assets/css/metric.css
.legend-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 170px;
}

.aggregate-conatiner {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: auto;
  margin-bottom: 50px;
  justify-items: center;

  /* margin: 20px; */
  /* padding: 15px; */
}

.avaliable-box {
  background-color: rgba(44, 130, 201, 1);
  width: 15px;
  height: 10px;
  display: flex;
  align-self: center;
}
.usage-box {
  background-color: rgba(19, 221, 29, 1);
  width: 15px;
  height: 10px;
  display: flex;
  align-self: center;
}

.legend-section {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-left: 5px;
  margin-top: 10px;
}
.pieChart {
  background-color: white;
  height: 320px;
  width: 280px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
    0 0 40px rgba(0, 0, 0, 0.1) inset;
  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
    0 0 40px rgba(0, 0, 0, 0.1) inset;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
}

.lineChart {
  height: 640px;
  width: 560px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.ltTable {
  width: 600px;
  text-align: center;
}

.metric-section-title {
  height: 30px;
  margin-bottom: 15px;
}

.metrics-options-form {
  background-color: white;
  padding: 20px 10px 15px 15px;

  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
    0 0 40px rgba(0, 0, 0, 0.1) inset;
  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
    0 0 40px rgba(0, 0, 0, 0.1) inset;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
}

.metrics-options-form input {
  margin-left: 10px;
}

